@@ -1,3 +1,8 @@
+2011-05-29  Ian Lance Taylor  <iant@google.com>
+
+	* binary.cc (Binary_to_elf::sized_convert): Don't crash if the
+	binary input file is empty.
+
 2011-05-06  Ian Lance Taylor  <iant@google.com>
 
 	* layout.cc (Layout::layout): If the output section flags change,
